<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_bottom_message"
        android:enabled="true"
        android:icon="@drawable/message"
        android:title="@string/message"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_bottom_moment"
        android:enabled="true"
        android:icon="@drawable/find"
        android:title="@string/moments"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_bottom_find"
        android:enabled="true"
        android:icon="@drawable/near_me"
        android:title="@string/people_around"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_bottom_me"
        android:enabled="true"
        android:icon="@drawable/me"
        android:title="@string/me"
        app:showAsAction="ifRoom" />
</menu>